fixes #43 (#44)
* fixes #43

* add test case for handler

* add error status publish
